samples/_failures_safe/1761352600_101f6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f7e20b1.c: In function ‘main’:
./samples/SAFE/__tmp_9f7e20b1.c:188:12: error: missing terminating " character
  188 |     printf("Sim
      |            ^~~~
./samples/SAFE/__tmp_9f7e20b1.c:188:5: error: expected expression at end of input
  188 |     printf("Sim
      |     ^~~~~~
./samples/SAFE/__tmp_9f7e20b1.c:188:5: error: expected declaration or statement at end of input
